--- a/style.css
+++ b/style.css
@@ -68,6 +68,14 @@ body {
   border-color: #fff;
 }
 
+.jumbotron {
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/bolt-network/diagmonds_@2X.png');
+}
+
 .notification {
   position: relative;
   text-align: right;
