--- a/style.css
+++ b/style.css
@@ -154,6 +154,13 @@ body {
   font-size: 14px;
 }
 
+.video-item {
+  background-color: #fff;
+  padding: 20px;
+  margin: 20px 0;
+  box-shadow: 0 2px 3px rgba(0,0,0,.1);
+}
+
 .post p + img {
   width: 100%;
   margin-bottom: 15px;
