Remove notification class selectors & add feature img selector to fix image size on feature section on style.css

--- a/style.css
+++ b/style.css
@@ -76,47 +76,11 @@ body {
   background-image: url('https://s3.amazonaws.com/codecademy-content/projects/bolt-network/diagmonds_@2X.png');
 }
 
-.notification {
-  position: relative;
-  text-align: right;
-}
-
-.notification img {
-  padding: 10px 0;
-}
-
-.notification-menu {
-  position: absolute;
-  top: 50px;
-  left: -150px;
-  background-color: #e5e5e5;
-  border: #989898;
-  padding: 10px;
-  list-style: none;
-  width: 250px;
-  display: none;
-  text-align: left;
-}
-
-.notification-menu li {
-  background-color: #fff;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-.notification-menu .avatar {
-  padding: 2px 0;
-}
-
-.notification-menu h3 {
-  font-size: 15px;
-  margin: 0 0 5px 0;
-  display: inline;
-}
-
-.notification-menu p {
-  margin-bottom: 0;
-  font-size: 14px;
+.feature img {
+  height: auto;
+  width: auto;
+  max-width: 250px;
+  max-height: 120px;
 }
 
 .whitebox-item {
